--- a/accueil.css
+++ b/accueil.css
@@ -325,7 +325,8 @@ background-color: rgba(0, 0, 0, 0.767);
     display: flex;
     width: 100%;
     height: 100vh;
-  background-color: rgb(37, 37, 37);
+  /* background-color: rgb(37, 37, 37); */
+  background-color: black;
    
 }
 
@@ -362,8 +363,7 @@ background-color: rgba(0, 0, 0, 0.767);
     height: 30vh;
     width: 40vw;
     color: white;
-    background-color: rgba(202, 198, 198, 0.284);
-
+    
 
 
 }
@@ -371,45 +371,221 @@ background-color: rgba(0, 0, 0, 0.767);
   
 
   /* RESPONSIVE */
+/* TÉLÉPHONE */
+@media screen and (max-width: 767px) {
+  body {
+    margin: 0;
+    padding: 0;
+  }
 
-  /* TÉLÉPHONE */
+  .burger-menu-container {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    z-index: 1000;
+  }
+  
+  .burger-menu {
+    background: none;
+    border: none;
+    cursor: pointer;
+    display: block;
+  }
 
-  @media screen and (max-width: 767px){
-
-  /* ACCUEIL */
+  .burger-menu img {
+    height: 40px;
+    width: 40px;
+  }
 
   .backAcceuil {
     height: 100vh;
     width: 100vw;
-    background-image: url(img/1back.png);
- 
-  }
-  .navbar{
-    display: none;
-  }
-  .navMenu{
-    display: none;
+    background-image: url('img/1back.png');
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    text-align: center;
   }
 
-  .titre{
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+    background-color: #171816ae;
+    padding: 10px;
+    position: fixed;
+    top: 0;
+    width: 100vw;
+    height: 7vh;
+    z-index: 1000;
+  }
+
+  .navMenu {
+    display: none;
+    flex-direction: column;
+    width: 100%;
+    position: absolute;
+    top: 7vh;
+    left: 0;
+    background-color: #171816ae;
+    color: white;
+    list-style: none;
+  }
+
+  .navMenu.active {
+    display: flex;
+  }
+
+  .navMenu li {
+    width: 100%;
+    text-align: center;
+    padding: 10px;
+  }
+
+  .navMenu a {
+    color: white;
+    text-decoration: none;
+  }
+
+  .navMenu a:hover {
+    background-color: #f1f1f1;
+    color: black;
+  }
+
+  .menuDeroulant {
+    display: none;
+    flex-direction: column;
+    list-style: none;
+    color: white;
+  }
+
+  .submenu:hover .menuDeroulant,
+  .submenu .menuDeroulant.active {
+    display: flex;
+  }
+
+  .navLogo {
+    width: 40px;
+    height: 40px;
+    display: block;
+  }
+
+  .navLogo img {
+    width: 100%;
+    height: 100%;
+  }
+
+  .avatar {
+    display: flex;
+    align-items: center;
+    margin-right: 25px;
+  }
+
+  .avatar img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+  }
+
+  .titre {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 70vh;
+    width: 100vw;
+  }
+
+  .titre h1 {
     font-size: 2em;
+    color: white;
+    letter-spacing: 2px;
   }
 
-/* PAGE2 */
-.page2{
- background-color: aqua;
+  /* PAGE2 et PAGE3 */
+  .page2, .page3 {
+    min-height: 100vh;
+    width: 100vw;
+    background-image: url(img/backfood.png);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+  }
 
-}
-.burgers, .classiques, .compositions, .petitefaim {
-  flex-direction: column;
-  display: flex;
-  align-items: center;
-  gap: 20px; 
-}
+  .menu-section, .menu-section2 {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 20px;
+  }
 
-.burgers img, .classiques img, .compositions img, .petitefaim img {
-  height: 30px;
+  .menu-title, .menu-title2 {
+    color: white;
+    margin-bottom: 30px;
+    font-size: 1.5em;
+  }
 
-}
+  .burgers, .classiques, .compositions, .petitefaim {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    height: auto;
+    width: 90vw;
+  }
 
+  .burgers img, .classiques img, .compositions img, .petitefaim img {
+    height: 150px;
+    width: auto;
+    box-shadow: 4px 4px 8px rgba(225, 219, 219, 0.844);
+    transition: box-shadow 0.3s ease;
+    border-radius: 10%;
+  }
+
+  .burgers img:hover, .classiques img:hover, .compositions img:hover, .petitefaim img:hover {
+    box-shadow: 0px 20px 80px rgba(237, 232, 232, 0.979);
+    transform: scale(1.1);
+    background-color: rgba(255, 255, 255, 0.254);
+    border-radius: 10%;
+  }
+
+  /* PAGE4 */
+  .contact {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: auto;
+    background-color: black;
+  }
+
+  .droite, .gauche {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+  }
+
+  #map {
+    width: 90%;
+    height: 300px;
+  }
+
+  .reseaux {
+    margin-bottom: 20px;
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+  }
+
+  .reseaux img {
+    height: 30px;
+    width: 30px;
+  }
+
+  .contact-info {
+    text-align: center;
+    margin-bottom: 20px;
+    font-size: 1.2em;
+    color: white;
+  }
 }
