--- a/burger.css
+++ b/burger.css
@@ -9,33 +9,93 @@ html, body {
     height: 100%;
 }
 
-.burger-menu {
-    background: none;
-    border: none;
-    cursor: pointer;
-    display: none;
-}
 .navbar {
-    display: none;
-    flex-direction: row;
-    justify-content: space-between;
-    background-color: #171816ae;
-    padding: 10px;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: 7vh;
-    z-index: 1000;
+  display: flex;
+  justify-content: space-between;
+  background-color: #171816ae;
+  padding: 10px;
+  position: fixed;  
+  top: 0;  
+  width: 100vw;  
+  height: 6vh; 
+  z-index: 1000;  
+}
+
+
+.logoHome{
+  margin-left: 15px;
+}
+.navLogo{
+  display: none;
+}
+.logoHome img{
+  width: 30px;
+  height: 30px;
 }
 
 .burgerMenu {
-    display: none;
+  display: none; /* Cache le burger menu sur grand écran */
 }
-.navLogo {
-    display: none;
+.deroulant{
+  text-decoration: none;
 }
 .navMenu {
-    display: none;
+  flex-direction: row;
+  width: auto;
+  position: static;
+  background-color: transparent;
+  display: flex; /* Affiche le menu horizontalement */
+}
+
+.navMenu li {
+  width: auto;
+  padding: 10px 15px;
+  position: relative; /* Ajouté pour permettre le positionnement relatif du sous-menu */
+}
+.submenu{
+  list-style: none;
+}
+.logoHome:hover{
+  transform: scale(1.08); 
+}
+.menuDeroulant {
+  display: none;
+  position: absolute;
+  background-color: #171816ba;
+  padding: 10px;
+  border-radius: 5px;
+  top: 100%; /* Positionne le sous-menu directement en dessous de son parent */
+  left: 0;
+  list-style: none; /* Enlève les puces des listes */
+  padding: 0; /* Enlève le padding par défaut */
+  margin: 0; /* Enlève la marge par défaut */
+}
+
+.menuDeroulant li {
+  color: white;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+   list-style: none;
+}
+
+.submenu:hover .menuDeroulant {
+  display: flex;
+  flex-direction: column;
+}
+
+.navMenu .submenu > a {
+  color: white;
+}
+
+.navMenu a, .menuDeroulant a {
+  color: white;
+  text-decoration: none;
+}
+
+.navMenu a:hover, .menuDeroulant a:hover {
+  background-color: #f1f1f1;
+  color: black;
 }
 
 /* Styles pour le menu responsive */
@@ -45,21 +105,27 @@ html, body {
         height: 40px;
         display: block;
     }
+    .navbar{
+      display: block;
+    }
     .navLogo img {
         width: 100%;
         height: 100%;
     }
     .burgerMenu {
         display: block;
+        position: absolute;
+        top:0;
+        right: 0;
     }
     .navMenu {
-        display: none;
+       
         flex-direction: column;
         width: 100%;
         position: absolute;
         top: 7vh;
         left: 0;
-        background-color: #171816ae;
+        background-color: #171816ba;
         color: white;
         list-style: none;
     }
@@ -86,9 +152,18 @@ html, body {
         height: 40px;
         width: 40px;
     }
+    .burger-menu {
+      display: block;
+    }
     .navMenu a, .menuDeroulant a {
         color: white; /* Assure que le texte des liens est en blanc */
         text-decoration: none; /* Supprime la décoration des liens */
+    }
+    .navMenu .submenu > a{
+   color: white;
+   font-weight: bold;
+ 
+   
     }
     .navMenu a:hover, .menuDeroulant a:hover {
         background-color: #f1f1f1;
@@ -339,23 +414,13 @@ html, body {
 
 /* TÉLÉPHONE */
 @media screen and (max-width: 767px){
-  .burger-menu {
-    display: block;
-    position: fixed;
-    top: 10px;
-    right: 10px;
-    z-index: 100;
-  }
-  .burger-menu img{
-    height: 35px;
-    width: 35px;
-  }
+ 
 
   .backSimple {
     height: 100vh;
     width: 100vw;
     background-image: url(img/backtelephone.png);
-    background-color: black;
+  
     display: flex;
     flex-direction: column; /* Les enfants sont disposés en colonne */
     align-items: center; /* Centre les enfants horizontalement */
@@ -542,17 +607,7 @@ html, body {
 
 /* FORMAT TABLETTE */
 @media screen and (min-width: 768px) and (max-width: 1024px) {
-  .burger-menu {
-    display: block;
-    position: fixed;
-    top: 10px;
-    right: 10px;
-    z-index: 100;
-  }
-  .burger-menu img {
-    height: 40px;
-    width: 40px;
-  }
+
 
   .backSimple, .backSmash, .backFish, .backChicken, .backRoyal {
     height: 100vh;
