--- a/composition.css
+++ b/composition.css
@@ -9,39 +9,103 @@
     height: 100%;
 
   }
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+    background-color: #171816ae;
+    padding: 10px;
+    position: fixed;  
+    top: 0;  
+    width: 100vw;  
+    height: 6vh; 
+    z-index: 1000;  
+  }
   
-  .burger-menu {
-    background: none;
-    border: none;
-    cursor: pointer;
+  /* .navLogo {
+    width: auto;
+    height: auto;
+  }
+  
+  .navLogo img {
+    width: 30px;
+    height: 30px;
+  } */
+  .logoHome{
+    margin-left: 15px;
+  }
+  .navLogo{
     display: none;
   }
-  .navbar{
-    display: none;
+  .logoHome img{
+    width: 30px;
+    height: 30px;
+  }
+  .logoHome:hover{
+    transform: scale(1.08); 
   }
   
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  background-color: #171816ae;
-  padding: 10px;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  height: 7vh;
-  z-index: 1000;
+  .burgerMenu {
+    display: none; /* Cache le burger menu sur grand écran */
+  }
+  .deroulant{
+    text-decoration: none;
+  }
+  .navMenu {
+    flex-direction: row;
+    width: auto;
+    position: static;
+    background-color: transparent;
+    display: flex; /* Affiche le menu horizontalement */
+  }
   
-}
-
-.burgerMenu {
-  display: none;
-}
-.navLogo{
-  display: none;
-}
-.navMenu{
-  display: none; 
-}
+  .navMenu li {
+    width: auto;
+    padding: 10px 15px;
+    position: relative; /* Ajouté pour permettre le positionnement relatif du sous-menu */
+  }
+  
+  .menuDeroulant {
+    display: none;
+    position: absolute;
+    background-color: #171816ba;
+    padding: 10px;
+    border-radius: 5px;
+    top: 100%; /* Positionne le sous-menu directement en dessous de son parent */
+    left: 0;
+    list-style: none; /* Enlève les puces des listes */
+    padding: 0; /* Enlève le padding par défaut */
+    margin: 0; /* Enlève la marge par défaut */
+  }
+  
+  .menuDeroulant li {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    list-style: none;
+  }
+  .submenu{
+    list-style: none;
+  }
+  .submenu:hover .menuDeroulant {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .navMenu .submenu > a {
+    color: white;
+  }
+  
+  .navMenu a, .menuDeroulant a {
+    color: white;
+    text-decoration: none;
+  }
+  
+  .navMenu a:hover, .menuDeroulant a:hover {
+    background-color: #f1f1f1;
+    color: black;
+  }
+  
 
 /* Styles pour le menu responsive */
 @media screen and (max-width: 767px) {
@@ -50,18 +114,21 @@
       height: 40px;
       display: block;
   }
-
+  .navbar{
+    display: block;
+  }
   .navLogo img {
       width: 100%;
       height: 100%;
   }
-
   .burgerMenu {
       display: block;
+      position: absolute;
+      top:0;
+      right: 0;
   }
-
   .navMenu {
-      display: none;
+     
       flex-direction: column;
       width: 100%;
       position: absolute;
@@ -71,40 +138,40 @@
       color: white;
       list-style: none;
   }
-
   .navMenu.active {
       display: flex;
   }
-
   .menuDeroulant {
       display: none;
       flex-direction: column;
       list-style: none;
       color: white;
   }
-
   .submenu:hover .menuDeroulant,
   .submenu .menuDeroulant.active {
       display: flex;
   }
-
   .navMenu li {
       width: 100%;
       text-align: center;
       padding: 10px;
       color: white;
   }
-
   .burger-menu img {
       height: 40px;
       width: 40px;
   }
-
+  .burger-menu {
+    display: block;
+  }
   .navMenu a, .menuDeroulant a {
       color: white; /* Assure que le texte des liens est en blanc */
       text-decoration: none; /* Supprime la décoration des liens */
   }
-
+  .navMenu .submenu > a{
+ color: white;
+ font-weight: bold;
+  }
   .navMenu a:hover, .menuDeroulant a:hover {
       background-color: #f1f1f1;
       color: black; /* Change la couleur du texte au survol pour une meilleure visibilité */
@@ -703,7 +770,7 @@
     align-items: center; /* Centre les éléments verticalement */
     height: 15vh; 
     width: 100vw; 
-    margin-left: 20vw;
+    margin-left: 35vw;
     margin-top:5vh;
   }
  .prix-containerK, .prixK, .prix-containerT, .prixT{
@@ -713,6 +780,7 @@
   height: 15vh; 
   width: 100vw; 
   margin-top:10vh;
+
  }
   .prix1 p{
     height: 60px;
@@ -985,4 +1053,353 @@
     font-size: 0.9em;
     padding: 2px 0;
 }
+}
+
+
+/* FORMAT TABLETTE */
+@media screen and (min-width: 768px) and (max-width: 1180px){
+
+  .backTacos, .backTacosbowl, .backAssiette, .backKapsalon{
+    height: 100vh;
+    width: 100vw;
+    background-image: url(img/backtablette.png);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 30px;
+  }
+
+
+  .responsiveTacos,  .responsiveTacosbowl, .responsiveKapsalon, .responsiveAssiette{
+    height: 10vh;
+    width: 100vw;
+   text-align: center;
+   display: block;
+   margin-left: -30vw;
+   margin-top: -5vh;
+   }
+  
+   .responsiveTacos img,  .responsiveTacosbowl img, .responsiveKapsalon img, .responsiveAssiette img{
+    height: 300px;
+    width: 300px;
+ }
+
+  .titre1{
+    width: 100vw;
+    height: 50vh; 
+    overflow: hidden; 
+  }
+  
+  .h2Premier{
+    height: 10vh;
+    width: 100vw;
+
+  }
+
+  .h2Premier h2{
+    font-size: 1.9em;
+   
+  }
+  .h2 {
+    height: 5vh; 
+  }
+
+  .description1 {
+    width: 95vw;
+    height: 5vh;
+    margin: auto;
+    margin-left: 35px;
+    text-align: center;
+  }
+  .description1 p {
+    font-size: 1.4em;
+  }
+  .prix-container1 .prix1{
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    height: 15vh; 
+    width: 100vw; 
+    margin-left: 45vw;
+    margin-top: 15vh;
+  }
+
+  .prix-containerK, .prixK, .prix-containerT, .prixT{
+    display: flex;
+    justify-content: center; /* Centre les éléments horizontalement */
+    align-items: center; /* Centre les éléments verticalement */
+    height: 15vh; 
+    width: 100vw; 
+    margin-top:10vh;
+  
+   }
+
+
+  .prix1 p{
+    height: 90px;
+    width: 90px;
+    font-size: 1.9em;
+  }
+ .prixK p, .prixT p{
+  height: 90px;
+  width: 90px;
+  font-size: 1.9em;
+ }
+
+.option span{
+    font-size: 1em;
+}
+
+
+.titresupp1{
+  width: 100vw;
+  height: 50vh;
+
+}
+
+ 
+  .h2viande{
+    font-size: 1.6em;
+    height: 5vh;
+    width: 100vw;
+   
+  }
+  .viandes{
+    height: 15vh;
+    width: 100vw;
+    margin-left: -5px;
+ 
+  }
+  .viandes .item{
+    height: 90px;
+    width: 90px;
+  }
+  .h2supp1{
+    font-size: 1.6em;
+    height: 5vh;
+    width: 100vw;
+    margin-top: -2vh;
+  }
+
+  .suppléments1 img, .viandes img {
+    height: 70px;
+    width: 70px; 
+  }
+  .suppléments1{
+    height: 15vh;
+    width: 100vw;
+   margin-left: -5px;
+   margin-top: 2vh;
+  
+  }
+
+.suppléments1 .item{
+  height: 90px;
+  width: 90px;
+}
+  .optionsupp1{
+    height: 10vh;
+    width: 90vw;
+
+    gap: 5px;
+    margin-left: 20px;
+  }
+  .optionsupp1 span {
+    font-size: 1.5em; 
+  }
+  .optionsupp1 p {
+    height: 70px;
+    width: 70px;
+    font-size: 1.5em; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .item img {
+    width: 100%;
+    height: 100%;
+    transition: transform 0.3s ease;
+}
+
+.item:hover img {
+    transform: scale(1.3);
+}
+
+.label {
+    position: absolute;
+    z-index: 10;
+    bottom: 10px;
+    left: 0;
+    right: 0; 
+    text-align: center;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5); 
+    visibility: hidden;
+    font-size: 0.9em;
+    padding: 2px 0;
+}
+
+/* CARBONNADE */
+.backCarbonnade {
+  height: 100vh;
+  width: 100vw;
+  background-image: url(img/backtablette.png);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0 30px;
+}
+
+.responsiveCarbonnade{
+  display: block;
+height: 25vh;
+  width: 100vw;
+ text-align: center;
+margin-left: -30vw;
+}
+
+.responsiveCarbonnade img {
+  height: 300px;
+  width: 300px;
+}
+
+.titre1 {
+  width: 100vw;
+  height: 60vh; 
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;  
+}
+
+.h2Premier {
+  height: 15vh;
+  width: 100vw;
+  
+}
+
+.description1 {
+  width: 90vw;
+  height: 5vh;
+  
+}
+
+.description1 p {
+  font-size: 1.4em;
+}
+
+.prix-container1 , .prix1{
+  display: flex;
+  text-align: center;
+  justify-content: center; 
+  align-items: center; 
+  height: 20vh;
+  width: 100vw;
+
+}
+
+.option span {
+  font-size: 1.7em;
+}
+
+.prix p {
+  height: 90px;
+  width: 90px;
+  font-size: 1.9em;
+}
+
+.h2 {
+  font-size: 1.9em;
+  height: auto;
+  width: 100vw;
+  text-align: center;
+  margin: 20px 0;
+}
+
+.titresuppCarbonnade {
+  width: 100vw;
+  height: 40vh;
+  text-align: center;
+
+}
+
+.h2supp {
+  font-size: 1.7em;
+  height: 10vh;
+  width: 100vw;
+  
+}
+
+.suppléments {
+  height: 15vh;
+  width: 90vw;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 5px;
+  margin-top: -30px;
+}
+
+.suppléments .item {
+  height: 90px;
+  width: 90px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+.suppléments img {
+  height: 60px;
+  width: 60px;
+}
+
+.optionsupp {
+  height: 15vh;
+  width: 80vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  margin-top: 5px;
+  margin-left: 10vw;
+}
+
+.optionsupp span {
+  font-size: 1.4em;
+}
+
+.optionsupp p {
+  height: 60px;
+  width: 60px;
+  font-size: 1.2em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.item img {
+  width: 100%;
+  height: 100%;
+  transition: transform 0.3s ease;
+}
+
+.item:hover img {
+  transform: scale(1.3);
+}
+
+.label {
+  position: absolute;
+  z-index: 10;
+  bottom: 10px;
+  left: 0;
+  right: 0;
+  text-align: center;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.5);
+  visibility: hidden;
+  font-size: 1em;
+  padding: 2px 0;
+}
+
+
 }
