--- a/connexion.css
+++ b/connexion.css
@@ -1,50 +1,69 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color:black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-}
-.container {
-    background-color: white;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    max-width: 400px;
-    width: 100vw;
-
-}
-
-h2 {
-    text-align: center;
-    color: #333;
-}
-form {
+    background-image: url(img/backfood.png);
     display: flex;
     flex-direction: column;
-    margin-bottom: 20px;
+    align-items: center; 
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    margin-top: 50px;
 }
+
+.logoHome{
+   left: 2%;
+   top: 2%;
+   position: absolute;
+  }
+
+  .logoHome img{
+    width: 40px;
+    height: 40px;
+  }
+  .logoHome:hover{
+    transform: scale(1.08); 
+  }
+h2{
+    font-size: 2.6em;
+    color: white;
+    letter-spacing: 7px;
+}
+
 label {
+    display: block;
     margin-bottom: 5px;
-    color: #555;
+    color: white;
+    font-size: 1.5em;
+  
 }
-input[type="text"],
-input[type="password"],
-input[type="submit"] {
-    margin-bottom: 15px;
+.connect{
+    background-color: rgba(0, 0, 0, 0.381);
+    height: 80vh;
+    width: 30vw;
+
+}
+input{
+    width: 150px;
     padding: 10px;
+    margin-bottom: 15px;
     border: 1px solid #ccc;
-    border-radius: 4px;
+    border-radius: 5px;
+   margin-top: 20px;
 }
-input[type="submit"] {
-    background-color: #4CAF50;
+button {
+    width: 120px;
+    padding: 10px;
+    background-color: #5A7C2A;
     color: white;
     border: none;
+    border-radius: 5px;
     cursor: pointer;
-    transition: background-color 0.3s;
+    font-size: 1em;
+    margin-left: -55px; 
 }
-input[type="submit"]:hover {
-    background-color: #45a049;
+button:hover {
+    background-color: #0056b3;
+}
+.error-message {
+    color: red;
+    margin-bottom: 15px;
 }
