--- a/petitefaim.css
+++ b/petitefaim.css
@@ -9,107 +9,182 @@ html, body {
     height: 100%;
     
 }
-.burger-menu {
-  background: none;
-  border: none;
-  cursor: pointer;
+.responsiveNuggets, .responsiveMozza, .responsiveChili, .responsiveOignons, .responsiveSalade{
   display: none;
 }
-.navbar{
-  display: none;
-}
-
 .navbar {
-display: flex;
-justify-content: space-between;
-background-color: #171816ae;
-padding: 10px;
-position: fixed;
-top: 0;
-width: 100%;
-height: 7vh;
-z-index: 1000;
-
+  display: flex;
+  justify-content: space-between;
+  background-color: #171816ae;
+  padding: 10px;
+  position: fixed;  
+  top: 0;  
+  width: 100vw;  
+  height: 6vh; 
+  z-index: 1000;  
 }
 
-.burgerMenu {
-display: none;
+/* .navLogo {
+  width: auto;
+  height: auto;
+}
+
+.navLogo img {
+  width: 30px;
+  height: 30px;
+} */
+.logoHome{
+  margin-left: 15px;
 }
 .navLogo{
-display: none;
+  display: none;
 }
-.navMenu{
-display: none; 
+.logoHome img{
+  width: 30px;
+  height: 30px;
 }
-
-/* Styles pour le menu responsive */
-@media screen and (max-width: 767px) {
-.navLogo {
-    width: 40px;
-    height: 40px;
-    display: block;
+.logoHome:hover{
+  transform: scale(1.08); 
 }
-.navbar{
-display: block;
-}
-.navLogo img {
-    width: 100%;
-    height: 100%;
-}
-
 .burgerMenu {
-    display: block;
+  display: none; /* Cache le burger menu sur grand écran */
 }
-
+.deroulant{
+  text-decoration: none;
+  list-style: none;
+}
 .navMenu {
-    display: block;
-    flex-direction: column;
-    width: 100%;
-    position: absolute;
-    top: 7vh;
-    left: 0;
-    background-color: #171816ae;
-    color: white;
-    list-style: none;
+  flex-direction: row;
+  width: auto;
+  position: static;
+  background-color: transparent;
+  display: flex; /* Affiche le menu horizontalement */
 }
-
-.navMenu.active {
-    display: flex;
+.submenu{
+  list-style: none;
+}
+.navMenu li {
+  width: auto;
+  padding: 10px 15px;
+  position: relative; /* Ajouté pour permettre le positionnement relatif du sous-menu */
 }
 
 .menuDeroulant {
-    display: none;
-    flex-direction: column;
-    list-style: none;
-    color: white;
+  display: none;
+  position: absolute;
+  background-color: #171816ba;
+  padding: 10px;
+  border-radius: 5px;
+  top: 100%; /* Positionne le sous-menu directement en dessous de son parent */
+  left: 0;
+  list-style: none; /* Enlève les puces des listes */
+  padding: 0; /* Enlève le padding par défaut */
+  margin: 0; /* Enlève la marge par défaut */
 }
 
-.submenu:hover .menuDeroulant,
-.submenu .menuDeroulant.active {
-    display: flex;
+.menuDeroulant li {
+  color: white;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  list-style: none;
 }
 
-.navMenu li {
-    width: 100%;
-    text-align: center;
-    padding: 10px;
-    color: white;
+.submenu:hover .menuDeroulant {
+  display: flex;
+  flex-direction: column;
 }
 
-.burger-menu img {
-    height: 40px;
-    width: 40px;
+.navMenu .submenu > a {
+  color: white;
 }
 
 .navMenu a, .menuDeroulant a {
-    color: white; /* Assure que le texte des liens est en blanc */
-    text-decoration: none; /* Supprime la décoration des liens */
+  color: white;
+  text-decoration: none;
 }
 
 .navMenu a:hover, .menuDeroulant a:hover {
-    background-color: #f1f1f1;
-    color: black; /* Change la couleur du texte au survol pour une meilleure visibilité */
+  background-color: #f1f1f1;
+  color: black;
 }
+
+
+/* RESPONSIVE BURGER */
+@media screen and (max-width: 767px) {
+  .navLogo{
+    display: none;
+  }
+  .logoHome {
+      width: 40px;
+      height: 40px;
+      display: block;
+  }
+  .logoHome:hover{
+    transform: scale(1.08); 
+  }
+  .navbar{
+    display: block;
+  }
+  .logoHome img {
+      width: 50px;
+      height: 50px;
+  }
+  .burgerMenu {
+      display: block;
+      position: absolute;
+      top:0;
+      right: 0;
+  }
+  .navMenu {
+     
+      flex-direction: column;
+      width: 100%;
+      position: absolute;
+      top: 7vh;
+      left: 0;
+      background-color: #171816ba;
+      color: white;
+      list-style: none;
+  }
+  .navMenu.active {
+      display: flex;
+  }
+  .menuDeroulant {
+      display: none;
+      flex-direction: column;
+      list-style: none;
+      color: white;
+  }
+  .submenu:hover .menuDeroulant,
+  .submenu .menuDeroulant.active {
+      display: flex;
+  }
+  .navMenu li {
+      width: 100%;
+      text-align: center;
+      padding: 10px;
+      color: white;
+  }
+  .burger-menu img {
+      height: 45px;
+      width: 45px;
+  }
+  .burger-menu {
+    display: block;
+  }
+  .navMenu a, .menuDeroulant a {
+      color: white; /* Assure que le texte des liens est en blanc */
+      text-decoration: none; /* Supprime la décoration des liens */
+  }
+  .navMenu .submenu > a{
+ color: #5A7C2A;
+ 
+  }
+  .navMenu a:hover, .menuDeroulant a:hover {
+      background-color: #f1f1f1;
+      color: black; /* Change la couleur du texte au survol pour une meilleure visibilité */
+  }
 }
 
 
@@ -368,7 +443,7 @@ display: block;
     align-items: center;
     justify-content: center;
     border-radius: 50%;
-    border: 3px solid white;
+  
   }
   
   
@@ -481,7 +556,6 @@ display: block;
     height: 100vh;
     width: 100vw;
     background-image: url(img/backtelephone.png);
-    background-color: black;
     display: flex;
     flex-direction: column; /* Les enfants sont disposés en colonne */
     align-items: center; /* Centre les enfants horizontalement */
@@ -491,7 +565,6 @@ display: block;
     height: 100vh;
     width: 100vw;
     background-image: url(img/backtelephone.png);
-    background-color: black;
     display: flex;
     flex-direction: column; /* Les enfants sont disposés en colonne */
     align-items: center; /* Centre les enfants horizontalement */
@@ -501,15 +574,24 @@ display: block;
     height: 100vh;
     width: 100vw;
     background-image: url(img/backtelephone.png);
-    background-color: black;
     display: flex;
     flex-direction: column; /* Les enfants sont disposés en colonne */
     align-items: center; /* Centre les enfants horizontalement */
     padding: 0 20px; /* Ajout de padding pour ne pas que le contenu touche les bords */
   }
-
+  .responsiveNuggets, .responsiveMozza, .responsiveChili, .responsiveOignons{
+    display: block;
+    height: 40vh;
+    width: 100vw;
+   text-align: center;
+  
+  }
+.responsiveNuggets img, .responsiveMozza img, .responsiveChili img, .responsiveOignons img{
+ height: 450px;
+ width: 450px;
+}
   .titre4 {
-    height: 30vh;
+    height: 20vh;
     width: 100vw;
     display: flex;
     justify-content: center;
@@ -530,7 +612,7 @@ display: block;
   }
 
   .lesPrix {
-    height: 70vh;
+    height: 40vh;
     width: 100vw;
     display: flex;
     flex-direction: row;
@@ -548,7 +630,7 @@ display: block;
     display: flex;
     flex-direction: row;
     align-items: center;
-  
+   margin-left: -5px;
   }
 
   .prix-container4 .optionPetite {
@@ -585,55 +667,67 @@ display: block;
     height: 100vh;
     width: 100vw;
     background-image: url(img/backtelephone.png);
-    background-color: black;
     display: flex;
     flex-direction: column; /* Les enfants sont disposés en colonne */
     align-items: center; /* Centre les enfants horizontalement */
     padding: 0 20px; /* Ajout de padding pour ne pas que le contenu touche les bords */
   }
+.responsiveSalade{
+  display: block;
+    height: 20vh;
+    width: 100vw;
+   text-align: center;
+   margin-left: -20vw;
+}
 
+.responsiveSalade img{
+  height: 250px;
+  width: 250px;
+}
 
   .titre2{
     width: 100vw;
-    height: 45vh; /* Prend toute la largeur de la vue */
-    overflow: hidden; /* Évite le débordement hors de la vue */
-    
+    height: 60vh; 
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;  
   }
   .titresupp2{
     width: 100vw;
     height: 55vh;
   }
   .h2Second{
-    height: 10vh;
+    height: 15vh;
     width: 100vw;
   }
   .description2{
-    width: 95vw;
-    height: 5vh; 
-    font-size: 1.3em;
+    width: 80vw;
+    height: 5vh;
+    margin: auto; 
   }
-  .prix-container2{
+  .description2 p{
+    font-size: 1em;
+  }
+
+  .prix-container2 .prix2{
     display: flex;
-    justify-content: center; /* Centre les éléments horizontalement */
-    align-items: center; /* Centre les éléments verticalement */
+    text-align: center;
+    justify-content: center; 
+    align-items: center; 
     height: 15vh; 
     width: 100vw; 
-    margin-left: -40px;
-    margin-top: 120px;
-    /* margin: 120px 50px 50px 50px; */
+  margin-top: 50px;
+  margin-left: 20vw;
   }
 .option span{
-    font-size: 1em;
+  font-size: 1.2em;
 }
 .prix2 p{
-  height: 70px;
-  width: 70px;
-  font-size: 1em;
+  height: 90px;
+  width: 90px;
+  font-size: 1.9em;
 }
-.prix2{
-  height: 15vh;
-  width: 90vw;
-}
+
   .h2 {
     font-size: 1.7em;
     height: 5vh; 
@@ -641,19 +735,17 @@ display: block;
   }
 
   .h2supp2{
-    font-size: 1.1em;
+    font-size: 1.5em;
     height: 10vh;
     width: 100vw;
     margin-top: 50px;
  
   }
-   .h2supp2 h2{
-    font-size: 1.6em;
-  }
+   
 
   .suppléments2 img {
-    height: 65px;
-    width: 65px; 
+    height: 80px;
+    width: 80px; 
   }
   .suppléments2{
     height: 15vh;
@@ -662,7 +754,29 @@ display: block;
    
   }
 .suppléments2 .item{
-  height: 85px;
-  width: 85px;
+  height: 90px;
+  width: 90px;
 }
+
+
  }
+
+
+ /* FORMAT TABLETTE */
+@media screen and (min-width: 768px) and (max-width: 1024px){
+  .backNuggets, .backMozza, .backChili, .backOignons, .backSalade{
+    background-image: url(img/backtablette.png);
+  }
+  .responsiveNuggets img, .responsiveMozza img, .responsiveChili img, .responsiveOignons img, .responsiveSalade img{
+    height: 550px;
+    width: 550px;
+   }
+   .responsiveNuggets, .responsiveMozza, .responsiveChili, .responsiveOignons, .responsiveSalade{
+    display: block;
+    height: 20vh;
+    width: 100vw;
+   text-align: center;
+   margin-left: -20vw;
+
+  }
+}
